--- a/liking_likes/style.css
+++ b/liking_likes/style.css
@@ -1,24 +1,86 @@
+*{
+    margin: 0 auto;
+    padding: 0;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
 .container{
 border: solid black;
-width: 400px;
+width: 960px;
+height: 960px;
 }
 
-.user{
+.row{
     display: flex;
-    justify-content: space-around;
+}
+.navbar{
+    width: 700px;
+    height: 50px;
+    background-color: black;
+    color: white;
+    padding-left: 20px
+}
+
+h2{
+    text-align: center;
+}
+
+.profile_column{
+    margin: 0;
+    display: flex;
+}
+.profile_content{
+    height: 200px;
+    width: 150px;
+    border: solid black;
+    margin-top: 20px;
+    margin-left: 120px;
+    text-align: center;
+
+   
+
+}
+.profilepic{
+    border-radius: 50%;
+    height: 50px;
+    width: 50px;
+    margin-bottom: 20px;
+    margin-left: 5px;
+    margin-top: 20px;
+
+ }
+
+ 
+h3{
+    margin-top: 20px;
+}
+a{
+    color: blue;
+    text-decoration: underline;
+}
+.friends_column{
+    display: flex;
+}
+.friends{
+    border: solid black;
+    height: 100px;
+    width: 400px;
+    margin-top: 20px;
+    padding: 20px;
+}
+
+.likes{
+    display: flex;
     align-items: center;
 }
-
 button{
     background-color: yellow;
     box-shadow: 5px 5px black;
     width: 60px;
     height: 30px;
     font-weight: bold;
-
 }
 
 p{
-    text-align: center;
-    font-weight: bold;
+    margin-top: 20px;
 }
